--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     <body>
         <header>
             <nav>
-                <a href=""><img src="img/logo.png" alt="Music Logo" /></a>
+                <a href=""><img src="img/logo.png" alt="Music" /></a>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="#sec1">Product</a></li>
