--- a/index.htm
+++ b/index.htm
@@ -134,7 +134,7 @@
             </div>
             <div id="div11">
                 <div>
-                    <h6>About</h6>
+                    <h6>About Us</h6>
                     <span>History</span>
                     <span>Our Team</span>
                     <span>Brand Guidelines</span>
